--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div><img class="character" src="media/ghost-right.gif" alt=""></div>
-    <img class="obstacle" src="media/rock.png" alt="">
-    <img class="obstacle" src="media/rock2.png" alt="">
-    <!-- <button class="btn">move</button> -->
-<script src="script.js"></script>
+    <div id="game-container">
+        <canvas id="game-canvas"></canvas>
+        <img id="character" src="media/ghost-left.gif" alt="Character">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
